[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/UI/Icon/sword.tres" type="Texture" id=1]
[ext_resource path="res://Assets/UI/Icon/shield.tres" type="Texture" id=2]
[ext_resource path="res://Assets/UI/Icon/potion.tres" type="Texture" id=3]
[ext_resource path="res://Assets/UI/Icon/flee.tres" type="Texture" id=4]
[ext_resource path="res://Scripts/UI/ActionMenu.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]
resource_name = "slide_in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="ActionMenu" type="Control"]
modulate = Color( 1, 1, 1, 0 )
rect_scale = Vector2( 4, 4 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 120.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attack" type="TextureButton" parent="HBoxContainer"]
margin_right = 32.0
margin_bottom = 40.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 1 )

[node name="Defend" type="TextureButton" parent="HBoxContainer"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 40.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )

[node name="Heal" type="TextureButton" parent="HBoxContainer"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 40.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )

[node name="Flee" type="TextureButton" parent="HBoxContainer"]
margin_left = 108.0
margin_right = 140.0
margin_bottom = 40.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/slide_in = SubResource( 1 )
[connection signal="pressed" from="HBoxContainer/Attack" to="." method="_on_Attack_pressed"]
[connection signal="pressed" from="HBoxContainer/Defend" to="." method="_on_Defend_pressed"]
[connection signal="pressed" from="HBoxContainer/Heal" to="." method="_on_Heal_pressed"]
[connection signal="pressed" from="HBoxContainer/Flee" to="." method="_on_Flee_pressed"]
